really realllly done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             </div>
             <div class="letter-body">
-               <p> 
+               <p class="context"> 
                 어떤 선물이 가장 뜻깊을까 <br>
                 하고 생각하다가<br>
                 이렇게 한번 만들어 봤엉.<br>
@@ -54,7 +54,7 @@
                 원래 선물을 가구를 만들어서<br>
                 할까 하다가,<br>
                 누가 이미 선물로 해줬다고 해서,<br>
-                이런거는 <span>한번도</span><br>
+                이런거는 <span id="once">한번도</span><br>
                 못받아 봤을것같아서,<br>
                 함해봤엉ㅎㅎ<br>
                 생일 정말 축하하고,<br>
@@ -74,7 +74,7 @@
 
     </div>
     <script>
-        var audio = new Audio('bdaysong.mp3');
+        var audio = new Audio('bdaysong1.mp3');
 
         document.getElementById('img').addEventListener("click", function () {
 
