fixed the file name for song

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     </div>
     <script>
-        var audio = new Audio('bdaysong1.mp3');
+        var audio = new Audio('bdaysong.mp3');
 
         document.getElementById('img').addEventListener("click", function () {
 
