--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="letter">
 
             <div class="letter-title">
-                <h1>지수에게  <span id="heart">💖</span> </h1>
+                <h1>지수에게 </h1>
 
             </div>
             <div class="letter-body">
